--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,24 @@ h1,h2,h3,h4,h5,h6 {
 
 p {
 	font-family: Poppins-Regular;
-	font-size: 14px;
+	font-size: 18px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+}
+
+h3 {
+	font-family: Poppins-Regular;
+	font-size: 20px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+  font-weight: bold;
+}
+
+h5 {
+	font-family: Poppins-Regular;
+	font-size: 15px;
 	line-height: 1.7;
 	color: #666666;
 	margin: 0px;
@@ -449,7 +466,7 @@ input.input100 {
 }
 
 .input-checkbox100:checked + .label-checkbox100::before {
-  color: #6675df;
+  color: #d5ecf7;
 }
 
 
@@ -686,8 +703,7 @@ input.input100 {
   background:-moz-linear-gradient(top, #e9e9e9,#949494e7);
   background:-o-linear-gradient(top, #e9e9e9,#b1b1b1ea);
   background:-ms-linear-gradient(top, #e9e9e9,#a5a5a5e1);
-	min-height: 100%;
-  min-width: 1024px;
+
 	
   /* Set up proportionate scaling */
   width: 100%;
@@ -997,7 +1013,7 @@ input:checked + section.boxacordion .box-title:before {
   h4 {
 	color: #ffffff;
   }
-  h4:hover {
-color:  rgb(226, 126, 32);
-cursor: pointer;
+  .btn:hover {
+background-color:  rgb(103, 183, 207);
+color:  rgb(7, 115, 148);
 }
