--- a/css/main.css
+++ b/css/main.css
@@ -58,9 +58,9 @@ body, html {
 /*---------------------------------------------*/
 a {
 	font-family: Poppins-Regular;
-	font-size: 14px;
+	font-size: 18px;
 	line-height: 1.7;
-	color: #666666;
+	color: rgb(32, 156, 193);
 	margin: 0px;
 	transition: all 0.4s;
 	-webkit-transition: all 0.4s;
